--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <!-- data boxes -->
 
     <div id="data-boxes" class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="row left">
                 <div class="col-12 left-element">
                     <div class="row">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="row right">
                 <div class="col-12 right-element">
                     <div class="">
