--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,18 +1,42 @@
-<footer>
-    <div id="footer-content" class="row">
-        <div id="footer-text" class="col-4">
-            footer-1
-        </div>
-        <div id="footer-text" class="col-4">
-            footer-2
-        </div>
-        <div id="footer-text" class="col-4">
-            footer-3
-        </div>
+
+<footer id="footer-settings" class="pt-4 pt-md-5 border-top">
+    <div class="row">
+      <div class="col-12 col-md">
+        <img class="mb-2" src="/images/sun.png" alt="" width="24" height="24">
+        <small class="d-block mb-3 text-muted">&copy; 2021-2022</small>
+      </div>
+      <div class="col-4 col-md">
+        <h5>Product Collection</h5>
+        <ul class="list-unstyled text-small">
+          <li><a id="footer-text" class="text-muted" href="#">Current and Forecast APIs</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Historial weather data</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Weather maps</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Weather DashBoard</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Stuff for developers</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Widgets</a></li>
+        </ul>
+      </div>
+      <div class="col-4 col-md">
+        <h5>Subscription</h5>
+        <ul class="list-unstyled text-small">
+          <li><a id="footer-text" class="text-muted" href="#">How to Start</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Pricing</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Subscribe for free</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">FAQ</a></li>
+        </ul>
+      </div>
+      <div class="col-4 col-md">
+        <h5>Terms & Condition</h5>
+        <ul class="list-unstyled text-small">
+          <li><a id="footer-text" class="text-muted" href="#">Terms and condition of sale</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Locations policy</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Privacy Policy</a></li>
+          <li><a id="footer-text" class="text-muted" href="#">Terms</a></li>
+        </ul>
+      </div>
     </div>
-</footer>
+  </footer>
+</div>
 
-<script src="" async defer></script>
 </body>
-
 </html>
