--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,20 +65,14 @@
 
 /* footer */
 
-footer {
-    margin-top: 75px;
-    height: 300px;
-    background-color: azure;
-}
-
-#footer-content {
-    width: 70%;
-    margin: 0px 15%;
+#footer-settings {
+    margin-top: 100px;
+    padding: 40px 20px;
+    background-color: #D9D7F1;
 }
 
 #footer-text {
-    text-align: center;
-    padding: 20px;
+    text-decoration: none;
 }
 
 /* top left box */
@@ -112,6 +106,44 @@ footer {
 
 .w-data {
     float: right;
+}
+
+/* left middle box */
+
+.visibility-box {
+    padding: 0px 10px;
+}
+
+.visibility-header {
+    margin-bottom: 30px;
+}
+
+.visibility-value {
+    margin-left: 50px;
+    border-right: 1px solid;    
+}
+
+.visibility-status {
+
+}
+
+.know-more {
+    float:right;
+}
+
+/* left bottom box */
+
+.pricing-box {
+    padding: 0px 10px;
+}
+
+.pricing-link {
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.pricing-header {
+     margin-bottom: 20px;
 }
 
 /* top right box */
@@ -221,6 +253,10 @@ a {
 }
 
 /* Dashboard styles */
+
+#home-link {
+    text-decoration: none;
+}
 
 .hidden-user {
     display: none;
@@ -349,3 +385,14 @@ a {
     margin: 0px 50px 0px 0px;
     padding-bottom: 0px;
     }
+
+/* pricing page */
+
+#pricing-items {
+    margin: 0px 15%;
+    width: 70%;
+}
+
+#mausom-name {
+    color: black;
+}
