--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -41,7 +41,7 @@
 
     <main class="form-signin">
         <form action="/" method="POST">
-            <img class="mb-4" src="images/letter-p.png" alt="logo" width="75" height="60">
+            <img class="mb-4" src="images/sun.png" alt="logo" width="75" height="60">
             <h1 class="h4 mb-3 fw-normal">Sign Up to Newsletter!</h1>
 
             <div class="form-floating">
