fixed the dashboard issue of undefined favorites

--- a/views/incorrectPass.ejs
+++ b/views/incorrectPass.ejs
@@ -23,7 +23,7 @@
             <h2>Oh No!</h2>
             <p>The account userName or Password provided are Incorrect. Please Try Again.</p>
             <p>For any issues please contact the Developer.</p>
-            <form action="/login_page">
+            <form action="/signIn">
                 <button class="btn btn-outline-secondary btn-light" type="submit">Login</button>
             </form>
         </div>
